<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoTelescope</string>
    <string name="title_activity_my">ArduinoTelescope</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="status">Status:</string>
    <string name="disconnected">Disconnected</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="HourAngle">Часовой угол</string>
    <string name="Declination">Склонение</string>
    <string name="Degrees">град</string>
    <string name="Minutes">мин</string>
    <string name="Seconds">сек</string>
    <string name="Hours">ч</string>
    <string name="setGoto">Goto</string>
    <string name="textGoto">GOTO</string>
    <string name="zero">0</string>
    <string name="calibrate">CALIBRATE</string>
    <string name="motor_on">MOTOR ON</string>
    <string name="motor_off">MOTOR OFF</string>
    <string name="update_position">UPDATE POSITION</string>
    <string name="enter_coordinates">ENTER COORDINATES</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="enter_coordinates_dialog">Paste coordinates</string>
    <string name="user">user</string>
    <string name="thread">thread</string>
</resources>
