    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".BluetoothActivity">

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle">

            <Button
                android:id="@+id/connectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.58"
                android:onClick="connectButtonPressed"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/connect" />

            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.52"
                android:onClick="disconnectButtonPressed"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/disconnect" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/HourAngle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="9"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/hAngHour"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="bottom"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Hours"
                        android:autofillHints="0" />

                    <EditText
                        android:id="@+id/hAngMinute"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="bottom"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Minutes"
                        android:autofillHints="0" />

                    <EditText
                        android:id="@+id/hAngSecond"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_gravity="bottom"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Seconds"
                        android:autofillHints="0" />

                    <LinearLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/buttonSecondUp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@android:drawable/arrow_up_float"
                            android:contentDescription="@string/up" />

                        <ImageButton
                            android:id="@+id/buttonSecondDown"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@android:drawable/arrow_down_float"
                            android:contentDescription="@string/down" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Declanation" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="9"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/declDegree"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:hint="@string/Degrees"
                        android:inputType="numberDecimal"
                        android:autofillHints="0" />

                    <EditText
                        android:id="@+id/declMinute"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:hint="@string/Minutes"
                        android:inputType="numberDecimal"
                        android:autofillHints="0" />

                    <EditText
                        android:id="@+id/declSecond"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:hint="@string/Seconds"
                        android:inputType="numberDecimal"
                        android:autofillHints="0" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/gotoButton"
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/setGoto"
                    android:textOff="@string/textGoto"
                    android:textOn="@string/textGoto" />
            </LinearLayout>

            <io.github.controlwear.virtual.joystick.android.JoystickView
                android:id="@+id/joystickView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                custom:JV_backgroundColor="#575153"
                custom:JV_borderWidth="0dp"
                custom:JV_buttonColor="#DC081E58"/>
        </LinearLayout>

    </LinearLayout>