<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".MainActivity">

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/connectButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="connectButtonPressed"
            android:text="@string/connect"/>

        <Button
            android:id="@+id/disconnectButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="disconnectButtonPressed"
            android:text="@string/disconnect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HourAngle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageButton
                    android:id="@+id/buttonHourUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:contentDescription="@string/up"
                    android:src="@android:drawable/arrow_up_float"
                    android:tag="H#H#UP" />

                <ImageButton
                    android:id="@+id/buttonMinuteUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/up"
                    android:tag="H#M#UP"
                    android:src="@android:drawable/arrow_up_float" />

                <ImageButton
                    android:id="@+id/buttonSecondUp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/up"
                    android:tag="H#S#UP"
                    android:src="@android:drawable/arrow_up_float" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/hAngHour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:autofillHints="0"
                    android:ems="10"
                    android:hint="@string/Hours"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />

                <EditText
                    android:id="@+id/hAngMinute"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:autofillHints="0"
                    android:ems="10"
                    android:hint="@string/Minutes"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />

                <EditText
                    android:id="@+id/hAngSecond"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:autofillHints="0"
                    android:ems="10"
                    android:hint="@string/Seconds"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageButton
                    android:id="@+id/buttonHourDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/down"
                    android:tag="H#H#DOWN"
                    android:src="@android:drawable/arrow_down_float" />

                <ImageButton
                    android:id="@+id/buttonMinuteDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/down"
                    android:tag="H#M#DOWN"
                    android:src="@android:drawable/arrow_down_float" />

                <ImageButton
                    android:id="@+id/buttonSecondDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/down"
                    android:tag="H#S#DOWN"
                    android:src="@android:drawable/arrow_down_float" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Declination"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageButton
                    android:id="@+id/buttonDeclDegreeUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/up"
                    android:tag="D#D#UP"
                    android:src="@android:drawable/arrow_up_float" />

                <ImageButton
                    android:id="@+id/buttonDeclMinuteUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/up"
                    android:tag="D#M#UP"
                    android:src="@android:drawable/arrow_up_float" />

                <ImageButton
                    android:id="@+id/buttonDeclSecondUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/up"
                    android:tag="D#S#UP"
                    android:src="@android:drawable/arrow_up_float" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <EditText
                    android:id="@+id/declDegree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autofillHints="0"
                    android:ems="10"
                    android:hint="@string/Degrees"
                    android:inputType="numberDecimal|numberSigned"
                    android:text="@string/zero" />

                <EditText
                    android:id="@+id/declMinute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autofillHints="0"
                    android:ems="10"
                    android:hint="@string/Minutes"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />

                <EditText
                    android:id="@+id/declSecond"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autofillHints="0"
                    android:ems="10"
                    android:hint="@string/Seconds"
                    android:inputType="numberDecimal"
                    android:text="@string/zero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageButton
                    android:id="@+id/buttonDeclDegreeDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/down"
                    android:tag="D#D#DOWN"
                    android:src="@android:drawable/arrow_down_float" />

                <ImageButton
                    android:id="@+id/buttonDeclMinuteDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/down"
                    android:tag="D#M#DOWN"
                    android:src="@android:drawable/arrow_down_float" />

                <ImageButton
                    android:id="@+id/buttonDeclSecondDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/down"
                    android:tag="D#S#DOWN"
                    android:src="@android:drawable/arrow_down_float" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/enterCoordinatesButton"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:text="@string/enter_coordinates"/>

            <ToggleButton
                android:id="@+id/motorButton"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:checked="false"
                android:textOff="@string/motor_off"
                android:textOn="@string/motor_on" />

            <ToggleButton
                android:id="@+id/gotoButton"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:checked="false"
                android:text="@string/setGoto"
                android:textOff="@string/textGoto"
                android:textOn="@string/textGoto" />
            <Button
                android:id="@+id/updatePosButton"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:text="@string/update_position"/>

            <io.github.controlwear.virtual.joystick.android.JoystickView
                android:id="@+id/joystickView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_gravity="center_horizontal"
                custom:JV_backgroundColor="#132255"
                custom:JV_buttonColor="#DCCFC4C4" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>